fixed overflow & mobile grid, if <meta viewport present mobile browsers ignore overflow attribute on body tag

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -25,10 +25,6 @@ $global-link-color: #0072ff;
 
 
 // HOME
-body {
-  position: relative;
-  overflow-x: hidden;
-}
 .home-diamond-shape {
   position: absolute;
   top: -60vw;
